# ads1299-esp

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  README.md  activate_idf.sh  ads1299.c  dir.txt  idf_component.yml  output.txt  pyproject.toml
components/ads1299/: CMakeLists.txt  ads1299.c  idf_component-yml
docs/: Doxyfile  api_reference.rst  conf.py  conf_common.py  index.rst  requirements.txt  requirements.xt
docs/en/: api-reference.rst  conf.py  index.rst
docs/html/: ads1299_8c.html  ads1299_8c.js  ads1299_8h.html  ads1299_8h.js  ads1299_8h_source.html  ads1299__defs_8h.html  ads1299__defs_8h.js  ads1299__defs_8h_source.html  annotated.html  annotated_dup.js  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  index.html  menudata.js  navtreedata.js  navtreeindex0.js  structads1299__chunk__t.html  structads1299__chunk__t.js  structads1299__chunkring__t.html  structads1299__chunkring__t.js  structads1299__config__t.html  structads1299__config__t.js  structads1299__continuous__config__t.html  structads1299__continuous__config__t.js  structads1299__dma__ctx.html  structads1299__dma__ctx.js  structads1299__sample__t.html  (+3 more)
docs/latex/: ads1299_8h.tex  ads1299_8h_source.tex  files.tex  (+10 more)
include/: ads1299.h  ads1299_defs.h
main/: CMakeLists.txt  main.cpp
personal_references/: info.md  pin_mappings.md  plan.md
(+45 files in other folders)
