[project]
name = "ads1299-esp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Carlos Lorenzo", email = "clorenzozuniga@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "breathe>=4.35.0",
    "esp-docs>=2.5.1",
    "sphinx>=7.1.2",
    "sphinx-rtd-theme>=3.1.0",
]

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"
